# Cranberry

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CODEOWNERS  Engine.sln  GenerateProject.bat  LICENSE.txt  ReadMe.md  Setup.bat
GameBuilder/: GameBuilder.csproj  ProgramMain.cs
Source/Runtime/ProgramCore/: CMakeLists.txt
Source/Runtime/ProgramCore/Private/: ArchiveBase.cpp  MathGeom.cpp  ProgramCoreModule.cpp
Source/Runtime/ProgramCore/Private/CmdLine/: CmdLine.cpp
Source/Runtime/ProgramCore/Private/Engine/Config/: EngineGlobalConfigs.cpp
Source/Runtime/ProgramCore/Private/Logger/: Logger.cpp
Source/Runtime/ProgramCore/Private/Math/: MathInternal.cpp  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  Plane.cpp  Quaternion.cpp  Rotation.cpp  RotationMatrix.cpp  Transform3D.cpp  Vector2.cpp  Vector2D.cpp  Vector3.cpp  Vector3D.cpp  Vector4.cpp  Vector4D.cpp
Source/Runtime/ProgramCore/Private/Memory/: BuiltinMemAlloc.cpp  BuiltinMemAlloc.h  Memory.cpp  MimallocMemAlloc.cpp  MimallocMemAlloc.h  StackAllocator.cpp
Source/Runtime/ProgramCore/Private/Modules/: ModuleManager.cpp
Source/Runtime/ProgramCore/Private/Profiler/: ProgramProfiler.cpp
Source/Runtime/ProgramCore/Private/Serialization/: ArchiveBase.cpp  ArrayArchiveStream.cpp  BinaryArchive.cpp  FileArchiveStream.cpp  TextArchive.cpp
Source/Runtime/ProgramCore/Private/String/: String.cpp  StringFormat.cpp  StringID.cpp
Source/Runtime/ProgramCore/Private/Types/: Colors.cpp  Time.cpp  Transform3D.cpp
Source/Runtime/ProgramCore/Private/Types/Camera/: Camera.cpp
Source/Runtime/ProgramCore/Private/Types/Platform/: EndianFunctionsImpl.cpp  GenericPlatformMemory.cpp  ModuleManager.cpp  PlatformAssertionErrors.cpp
Source/Runtime/ProgramCore/Private/Types/Uid/: Guid.cpp
Source/Runtime/ProgramCore/Public/CmdLine/: CmdLine.cpp  CmdLine.h
Source/Runtime/ProgramCore/Public/Config/: EngineVariableTypes.h  ProgramVarTypes.h
Source/Runtime/ProgramCore/Public/Engine/Config/: EngineGlobalConfigs.h
Source/Runtime/ProgramCore/Public/Logger/: Logger.cpp  Logger.h
Source/Runtime/ProgramCore/Public/Math/: BVH.h  Box.h  Camera.cpp  Camera.h  CoreMathTypedefs.h  CoreMathTypes.h  Grid.h  Math.h  MathEasing.h  MathGeom.cpp  MathGeom.h  MathInternal.cpp  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  PackRectangles.inl  Plane.h  Quaternion.cpp  Quaternion.h  Rotation.cpp  Rotation.h  RotationMatrix.cpp  RotationMatrix.h  Transform3D.cpp  Transform3D.h  Vector2.cpp  Vector2.h  Vector2D.h  Vector3.cpp  Vector3.h  Vector3D.h  Vector4.cpp  Vector4.h  Vector4D.h  VectorN.h  VectorND.h
Source/Runtime/ProgramCore/Public/Memory/: ArenaAllocator.h  BuiltinMemAlloc.cpp  BuiltinMemAlloc.h  FreeListAllocator.h  LinearAllocator.h  MemAllocator.h  Memory.cpp  Memory.h  Memory.inl  PoolAllocator.h  SlotAllocator.h  SmartPointers.h  StackAllocator.cpp  StackAllocator.h
Source/Runtime/ProgramCore/Public/Modules/: IModuleBase.h  ModuleManager.cpp  ModuleManager.h
Source/Runtime/ProgramCore/Public/Profiler/: ProfilerTypes.h  ProgramProfiler.hpp
Source/Runtime/ProgramCore/Public/Reflections/: Fields.h  FunctionParamsStack.h  Functions.h  MemberField.h
Source/Runtime/ProgramCore/Public/Serialization/: ArchiveBase.cpp  ArchiveBase.h  ArchiveTypes.h  ArrayArchiveStream.cpp  ArrayArchiveStream.h  BinaryArchive.cpp  BinaryArchive.h  CommonTypesSerialization.h  FileArchiveStream.cpp  FileArchiveStream.h  TextArchive.cpp  TextArchive.h
Source/Runtime/ProgramCore/Public/String/: MustacheFormatString.h  NameString.h  String.h  StringFormat.cpp  StringFormat.h  StringHelpers.inl  StringID.cpp  StringID.h  StringLiteral.h  StringRegex.h  TCharString.h
Source/Runtime/ProgramCore/Public/Types/: ColorConstants.inl  Colors.cpp  Colors.h  CompilerDefines.h  CoreDefines.h  CoreMiscDefines.h  CoreTypes.h  HashTypes.h  ProgramCoreDelegates.h  Time.cpp  Time.h  Transform3D.h
Source/Runtime/ProgramCore/Public/Types/Camera/: Camera.h
Source/Runtime/ProgramCore/Public/Types/Containers/: ArrayView.h  BitArray.h  FlatTree.h  FwdListSparsityPolicy.h  MinAllocVector.h  ReferenceCountPtr.h  SparseVector.h
Source/Runtime/ProgramCore/Public/Types/Delegates/: Delegate.h
Source/Runtime/ProgramCore/Public/Types/Patterns/: FactoriesBase.h
Source/Runtime/ProgramCore/Public/Types/Platform/: GenericPlatformCoreTypes.h  GenericPlatformFunctions.h  GenericPlatformMemory.cpp  GenericPlatformMemory.h  GenericPlatformTypes.h  ModuleManager.h  PlatformAssertionErrors.cpp  PlatformAssertionErrors.h  PlatformDefines.h  PlatformFunctions.h  PlatformMemory.h  PlatformTypes.h
Source/Runtime/ProgramCore/Public/Types/Templates/: GenClassHierarchy.h  TemplateTypes.h  TypeList.h  TypeTraits.h  ValueTraits.h
Source/Runtime/ProgramCore/Public/Types/Traits/: TypeTraits.h  ValueTraits.h
Source/Runtime/ProgramCore/Public/Types/Uid/: Guid.cpp  Guid.h
Source/Runtime/ProgramCore/Windows/Private/: WindowsPlatformFunctions.cpp
Source/Runtime/ProgramCore/Windows/Public/: WindowsCommonHeaders.h  WindowsCoreTypes.h  WindowsPlatformDefines.h  WindowsPlatformFunctions.cpp  WindowsPlatformFunctions.h  WindowsPlatformMemory.h  WindowsPlatformTypes.h
Source/Tools/CppReflection/: CMakeLists.txt  Header.h  Header.hpp  ReadMe.md
Source/Tools/CppReflection/Private/: ConsoleMain.cpp  TestCode.cpp  TestCode.h
Source/Tools/ModuleReflectTool/: CMakeLists.txt  Header.h  ReadMe.md  SampleHeader.h
Source/Tools/ModuleReflectTool/Private/: CmdLineArgConst.h  ConsoleMain.cpp  FileChangesTracker.cpp  FileChangesTracker.h  ModuleReflectTypes.h  ModuleSources.cpp  ModuleSources.h  SampleCode.cpp  SampleCode.h  TestCode.cpp  TestCode.h
Source/Tools/ModuleReflectTool/Private/Generator/: DataFormulator.cpp  GeneratorConsts.h  SourceGenerator.cpp  SourceGenerator.h
Source/Tools/ModuleReflectTool/Private/Parser/: ClangWrappers.h  ParseMeta.cpp  ParserHelper.cpp  ParserHelper.h
Source/Tools/ModuleReflectTool/Templates/: ReflectedHeader.mustache  ReflectedSource.mustache  StaticFunctions.mustache  StaticTypeGetter.mustache  VirtualTypeGetter.mustache
(+1373 files in other folders)
